# Hex-maze-spyglass

./: .gitignore  Choice_Analysis.ipynb  Hex_Maze_Analysis copy.ipynb  README.md  plot_reward_response.ipynb  pyproject.toml  steph_choice_analysis.ipynb
notebooks/: Berke_Clusterless_Waveform_Features.ipynb  Berke_Decoding_Clusterless.ipynb  Berke_Lab_decoding.ipynb  Berke_Lab_full_process.ipynb  Fetching_Data.ipynb  Populate_Tables.ipynb  README.md  Ramp_Analysis_YS.ipynb  utils.ipynb
notebooks/analysis/: Choice_Analysis.ipynb  Choice_Analysis_Single_Animal.ipynb
notebooks/dev/: Hex_Maze_Analysis.ipynb  Position_Berke_Lab.ipynb  example_basic_analysis_from_nwb.ipynb  hex_transitions.ipynb  plot_position_heatmap.ipynb
spyglass_hexmaze/: __init__.py  berke_fiber_photometry.py  hex_maze_behavior.py  hex_maze_decoding.py
